# plugin-Alirecog

libs/apr-toolkit/: aprtoolkit.vcxproj
libs/mrcp-engine/: mrcpengine.vcxproj
libs/mrcp-server/: mrcpserver.vcxproj
libs/mrcp-signaling/: mrcpsignaling.vcxproj
libs/uni-rtsp/: unirtsp.vcxproj
modules/mrcp-unirtsp/: mrcpunirtsp.vcxproj
plugins/Alirecog/: Alirecog.vcxproj  Alirecog.vcxproj.filters
plugins/Alisynth/: Alisynth.vcxproj
plugins/demo-verifier/: demoverifier.vcxproj
unimrcp-1.6.0/: README  readme.txt  unimrcp-2010.VC.opendb  unimrcp-2010.sln
unimrcp-1.6.0/plugins/Alisynth/aliSdk2.0/NlsSdkCpp2.0/: CMakeLists.txt
unimrcp-1.6.0/plugins/Alisynth/aliSdk2.0/NlsSdkCpp2.0/demo/: speechRecognizerDemo.cpp  vipServerDemo.cpp
unimrcp-1.6.0/plugins/Alisynth/aliSdk2.0/NlsSdkCpp2.0/include/: iNlsRequest.h  nlsClient.h  nlsEvent.h  speechTranscriberRequest.h
unimrcp-1.6.0/plugins/Alisynth/aliSdk2.0/NlsSdkCpp2.0/include/openssl/: opensslconf.h
unimrcp-1.6.0/plugins/Alisynth/aliSdk2.0/NlsSdkCpp2.0/lib/linux/: libcrypto.so.1.0.0
unimrcp-1.6.0/plugins/Alisynth/aliSdk2.0/NlsSdkCpp2.0/lib/windows/12.0/x64/Debug/: nlsCommonSdk.lib  nlsCppOpu.lib
unimrcp-1.6.0/plugins/Alisynth/aliSdk2.0/NlsSdkCpp2.0/lib/windows/14.0/x64/Release/: nlsCppSdk.lib
unimrcp-1.6.0/plugins/Alisynth/aliSdk2.0/NlsSdkCpp2.0/lib/windows/14.0/x86/Debug/: opus.lib
unimrcp-1.6.0/plugins/Alisynth/aliSdk2.0/NlsSdkCpp2.0/lib/windows/14.0/x86/Release/: nlsCommonSdk.lib  nlsCppSdk.lib
unimrcp-deps-1.6.0/: CHANGES-deps  README-deps  unimrcpdeps-2010.sln  unimrcpdeps.sln
(+257 files in other folders)
